--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Graphic Designer, Best Graphic Designer in Bangalore, Graphic Designing, Free Design, Freelancing Graphic Designer">
     <meta name="description" content="Best Graphic Designer in Bangalore | Graphic Design | Video Editing | Website Design | Front-End Developer | Lowest Price">
     <meta name="keywords" content="Graphic Designer for free, Graphic Designer in bangalore for free, Free graphic design, Free graphic designer in bangalore, Free Graphic Designer in World">
+    <link rel="shortcut icon" href="/img/logo-fevicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css">
