--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Best Graphic Designer in Bangalore | Graphic Design | Video Editing | Website Design | Front-End Developer | Lowest Price">
     <meta name="keywords" content="Graphic Designer for free, Graphic Designer in bangalore for free, Free graphic design, Free graphic designer in bangalore, Free Graphic Designer in World">
     <script src="https://kit.fontawesome.com/b857ae5875.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="/img/logo-fevicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css">
