--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="current">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about">About</a></li>
                 <li><a href="graphic_design.html">Graphic Design</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
