--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="current">About</a></li>
+                <li><a href="about" class="current">About</a></li>
                 <li><a href="graphic_design.html">Graphic Design</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
