--- a/about.html
+++ b/about.html
@@ -23,11 +23,11 @@
     <div class="container_nav">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index">Home</a></li>
                 <li><a href="about" class="current">About</a></li>
-                <li><a href="graphic_design.html">Graphic Design</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="graphic_design">Graphic Design</a></li>
+                <li><a href="services">Services</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
     </div>
