--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
     <div class="container_nav">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="graphic_design.html">Graphic Design</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html" class="current">Contact</a></li>
+                <li><a href="index">Home</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="graphic_design">Graphic Design</a></li>
+                <li><a href="services">Services</a></li>
+                <li><a href="contact" class="current">Contact</a></li>
             </ul>
         </nav>
     </div>
