--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <div class="container_nav">
         <nav>
             <ul>
-                <li><a href="index.html" class="current">Home</a></li>
+                <li><a href="index" class="current">Home</a></li>
                 <li><a href="about">About</a></li>
-                <li><a href="graphic_design.html">Graphic Design</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="graphic_design">Graphic Design</a></li>
+                <li><a href="services">Services</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
     </div>
