--- a/services.html
+++ b/services.html
@@ -23,11 +23,11 @@
     <div class="container_nav">
         <nav>
             <ul>
-                <li><a href="index.html" >Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="graphic_design.html">Graphic Design</a></li>
-                <li><a href="services.html" class="current">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index" >Home</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="graphic_design">Graphic Design</a></li>
+                <li><a href="services" class="current">Services</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
     </div>
