--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css">
-    <title>Home</title>
+    <title>Pradeep Giri | Graphic Designer, Web Developer, 3D Artist</title>
 </head>
 <body>
 
